Update spring cloud version and clean up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
-spring.cloud.config.server.git.uri=https://github.com/lddelz/app-config
-spring.cloud.config.server.git.default-label=main
-spring.cloud.config.server.git.clone-on-start=true 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+spring.cloud.config.server.git.uri=https://github.com/lddelz/app-config
+#spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.git.clone-on-start=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
